<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextMarkValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"

        android:ems="10"
        android:hint="@string/mark"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editTextMarkNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonAddMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/add"

        app:layout_constraintBottom_toTopOf="@+id/editTextMarkNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextMarkValue"
        app:layout_constraintTop_toBottomOf="@+id/editTextMarkValue" />

    <EditText
        android:id="@+id/editTextMarkNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/note"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>