<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <Button
            android:id="@+id/buttonAddStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/add"

            app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextFirstName"
            app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="text"

            app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>